[gd_scene load_steps=2 format=3 uid="uid://bj8svoamsuxgx"]

[ext_resource type="Script" path="res://Script/Pause.gd" id="1_5ugrw"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ugrw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 16.0
offset_right = 1.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.533333, 0.533333, 0.533333, 0.509804)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -187.5
offset_right = 191.0
offset_bottom = 187.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Resume" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Resume"

[node name="Options" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Options"

[node name="Menu" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Main Menu"

[node name="Exit" type="Button" parent="ColorRect/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Exit"

[connection signal="pressed" from="ColorRect/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
